--- a/web/homepage.html
+++ b/web/homepage.html
@@ -107,11 +107,11 @@
     </div>
 
 <!-- Desktop/Tablet version -->
-<div class="hidden md:flex w-full h-screen mx-auto bg-[#D6EBD5] rounded-2xl overflow-hidden">
-  <div class="flex flex-1 items-center justify-center">
+<div class="hidden md:flex w-full h-screen mx-auto bg-[#D6EBD5] rounded-2xl overflow-hidden " >
+  <div class="flex flex-1 items-center justify-center" style="margin: 0 20px;">
     <div
       class="bg-white w-full max-w-7xl rounded-2xl p-5 flex"
-      style="min-height: 600px"
+      style="min-height: 600px" 
     >
       <!-- Left Panel -->
       <div
