--- a/web/riwayat.html
+++ b/web/riwayat.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="id">
   <head>
@@ -60,17 +59,40 @@
       }
       /* Custom scrollbar for desktop version */
       .custom-scrollbar::-webkit-scrollbar {
-        width: 6px;
+        width: 8px;
       }
       .custom-scrollbar::-webkit-scrollbar-track {
         background: #f1f1f1;
+        border-radius: 4px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #888;
-        border-radius: 3px;
+        background: #c1c1c1;
+        border-radius: 4px;
       }
       .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #555;
+        background: #a8a8a8;
+      }
+
+      /* Desktop specific styles */
+      @media (min-width: 768px) {
+        .desktop-container {
+          max-height: 85vh;
+          height: 85vh;
+        }
+        .desktop-right-panel {
+          display: flex;
+          flex-direction: column;
+          height: 100%;
+        }
+        .desktop-right-content {
+          flex: 1;
+          overflow-y: auto;
+          min-height: 0;
+        }
+        .desktop-left-panel {
+          overflow-y: auto;
+          max-height: 100%;
+        }
       }
     </style>
   </head>
@@ -143,6 +165,27 @@
               <p class="text-xs text-gray-500 mt-1">20 Desember 2024</p>
             </div>
           </div>
+          <!-- Add more items to test mobile scroll -->
+          <div class="bg-white rounded-lg shadow-md flex overflow-hidden">
+            <div class="w-1/3 p-2">
+              <img src="cacar.png" alt="Acne Detection" class="w-full h-full object-cover rounded-lg" />
+            </div>
+            <div class="w-2/3 p-3 flex flex-col justify-center">
+              <h2 class="font-bold text-lg">Jerawat Batu</h2>
+              <p class="text-sm text-gray-600">Jerawat batu (jerawat kistik) adalah jenis jerawat paling parah</p>
+              <p class="text-xs text-gray-500 mt-1">20 Desember 2024</p>
+            </div>
+          </div>
+          <div class="bg-white rounded-lg shadow-md flex overflow-hidden">
+            <div class="w-1/3 p-2">
+              <img src="cacar.png" alt="Acne Detection" class="w-full h-full object-cover rounded-lg" />
+            </div>
+            <div class="w-2/3 p-3 flex flex-col justify-center">
+              <h2 class="font-bold text-lg">Jerawat Batu</h2>
+              <p class="text-sm text-gray-600">Jerawat batu (jerawat kistik) adalah jenis jerawat paling parah</p>
+              <p class="text-xs text-gray-500 mt-1">20 Desember 2024</p>
+            </div>
+          </div>
         </div>
       </main>
     </div>
@@ -150,9 +193,9 @@
     <!-- Desktop Version -->
     <div class="hidden md:flex w-full h-screen mx-auto bg-[#D6EBD5] rounded-2xl overflow-hidden">
       <div class="flex flex-1 items-center justify-center" style="margin: 0 20px;">
-        <div class="bg-white w-full max-w-7xl rounded-2xl p-5 flex" style="min-height: 600px">
+        <div class="bg-white w-full max-w-7xl rounded-2xl p-5 flex desktop-container">
           <!-- Left Panel -->
-          <div class="w-1/2 flex flex-col space-y-6 rounded-l-2xl bg-[#FFFFFF] p-10 text-black">
+          <div class="w-1/2 flex flex-col space-y-6 rounded-l-2xl bg-[#FFFFFF] p-10 text-black desktop-left-panel">
             <header class="mb-8 pb-6 border-b border-gray-300">
               <h1 class="title-font mb-2 select-none text-3xl">
                 Acne<span class="accent-green">Sense</span>
@@ -191,15 +234,15 @@
           </div>
 
           <!-- Right Panel -->
-          <div class="w-2/3 flex flex-col rounded-r-2xl overflow-hidden">
-            <header class="bg-[#6A9E61] p-6 flex items-center justify-between select-none">
+          <div class="w-2/3 desktop-right-panel rounded-r-2xl overflow-hidden">
+            <header class="bg-[#6A9E61] p-6 flex items-center justify-between select-none flex-shrink-0">
               <h2 class="header-desktop-font text-white">Riwayat</h2>
               <div class="w-12 h-12 rounded-full border border-gray-300 flex items-center justify-center overflow-hidden bg-white">
                 <img src="image.png" alt="avatar" class="w-full h-full object-cover" />
               </div>
             </header>
             
-            <div class="p-10 flex-1 overflow-y-auto custom-scrollbar">
+            <div class="desktop-right-content p-10 custom-scrollbar">
               <div class="space-y-6">
                 <!-- Riwayat Item -->
                 <div class="bg-white rounded-lg shadow-md flex overflow-hidden">
@@ -223,6 +266,37 @@
                     <p class="text-xs text-gray-500 mt-2">20 Desember 2024</p>
                   </div>
                 </div>
+                <div class="bg-white rounded-lg shadow-md flex overflow-hidden">
+                  <div class="w-1/3 p-2">
+                    <img src="cacar.png" alt="Acne Detection" class="w-full h-full object-cover rounded-lg" />
+                  </div>
+                  <div class="w-2/3 p-4 flex flex-col justify-center">
+                    <h2 class="font-bold text-xl">Jerawat Batu</h2>
+                    <p class="text-sm text-gray-600 mt-1">Jerawat batu (jerawat kistik) adalah jenis jerawat paling parah</p>
+                    <p class="text-xs text-gray-500 mt-2">20 Desember 2024</p>
+                  </div>
+                </div>
+                <div class="bg-white rounded-lg shadow-md flex overflow-hidden">
+                  <div class="w-1/3 p-2">
+                    <img src="cacar.png" alt="Acne Detection" class="w-full h-full object-cover rounded-lg" />
+                  </div>
+                  <div class="w-2/3 p-4 flex flex-col justify-center">
+                    <h2 class="font-bold text-xl">Jerawat Batu</h2>
+                    <p class="text-sm text-gray-600 mt-1">Jerawat batu (jerawat kistik) adalah jenis jerawat paling parah</p>
+                    <p class="text-xs text-gray-500 mt-2">20 Desember 2024</p>
+                  </div>
+                </div>
+                <div class="bg-white rounded-lg shadow-md flex overflow-hidden">
+                  <div class="w-1/3 p-2">
+                    <img src="cacar.png" alt="Acne Detection" class="w-full h-full object-cover rounded-lg" />
+                  </div>
+                  <div class="w-2/3 p-4 flex flex-col justify-center">
+                    <h2 class="font-bold text-xl">Jerawat Batu</h2>
+                    <p class="text-sm text-gray-600 mt-1">Jerawat batu (jerawat kistik) adalah jenis jerawat paling parah</p>
+                    <p class="text-xs text-gray-500 mt-2">20 Desember 2024</p>
+                  </div>
+                </div>
+                <!-- Add more items to test scroll -->
                 <div class="bg-white rounded-lg shadow-md flex overflow-hidden">
                   <div class="w-1/3 p-2">
                     <img src="cacar.png" alt="Acne Detection" class="w-full h-full object-cover rounded-lg" />
