--- a/web/forgot-3.html
+++ b/web/forgot-3.html
@@ -1,22 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+    />
     <title>AcneSense - New Password</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha384-k6RqeWeci5ZR/Lv4MR0sA0FfDOMT6C2kI2d1GyTFhZaPz8Lui9mF98f6Cil1FZ8H"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <style>
-        body, html {
-            overscroll-behavior: none;
-            background-color: #d6ebd5;
-            margin: 0;
-            padding: 0;
-            font-family: "Poppins", sans-serif;
-        }
-              .title-font {
+      body,
+      html {
+        overscroll-behavior: none;
+        background-color: #d6ebd5;
+        margin: 0;
+        padding: 0;
+        font-family: "Poppins", sans-serif;
+      }
+      .title-font {
         font-family: "manrope", sans-serif;
         font-size: 48px;
         font-weight: 800;
@@ -27,12 +44,19 @@
         font-weight: 500;
       }
     </style>
-</head>
-<body class="flex justify-center items-center min-h-screen p-0">
+  </head>
+  <body class="flex justify-center items-center min-h-screen p-0">
     <!-- Mobile version -->
-    <div class="block md:hidden w-full min-h-screen bg-white mx-auto flex flex-col relative overflow-hidden">
-        <div class="absolute top-0 left-0 w-full h-[150px] bg-gradient-to-b from-[#D6EBD5] to-white rounded-b-[50px] -z-10"></div>
-        
+    <div
+      class="block md:hidden w-full min-h-screen bg-white mx-auto flex flex-col relative overflow-hidden"
+    >
+      <!-- Top curve background -->
+      <div class="absolute top-0 left-0 w-full h-[150px] bg-gradient-to-b from-[#D6EBD5] to-white rounded-b-[50px] -z-10"></div>
+      <div class="absolute top-[-80px] right-[-80px] w-[160px] h-[160px] bg-[#05FF05FF] rounded-full opacity-20 pointer-events-none"></div>
+      <div class="absolute bottom-[-100px] left-[-130px] w-[200px] h-[200px] bg-[#03FF03FF] rounded-full opacity-15 pointer-events-none"></div>
+      <div class="absolute top-[20%] left-[-40px] w-[80px] h-[80px] bg-[#00FF00FF] rounded-full opacity-10 pointer-events-none"></div>
+      <div class="absolute top-[10%] right-[10px] w-[80px] h-[80px] bg-[#00FF00FF] rounded-full opacity-10 pointer-events-none"></div>
+
       <div class="text-center pt-10 pb-2">
         <div class="text-2xl font-extrabold text-black">
           Acne<span class="text-[#40c057]">Sense</span>
@@ -40,37 +64,86 @@
         <div class="text-xs text-gray-500 mb-5">For Your Acne Solution</div>
       </div>
 
-        <div class="text-center px-6">
-            <h1 class="text-xl font-bold mb-2">New Password</h1>
-            <h2 class="text-sm text-gray-600 mb-6">Yeayy, Password baru</h2>
-        </div>
+      <div class="text-center px-6">
+        <h1 class="text-xl font-bold mb-2">New Password</h1>
+        <h2 class="text-sm text-gray-600 mb-6">Yeayy, Password baru</h2>
+      </div>
 
-        <div class="px-7 flex flex-col flex-grow">
-            <form class="flex flex-col flex-grow">
-                <div class="mb-5">
-                    <label for="new-password" class="block text-xs mb-2 text-gray-800 font-medium">Password Baru</label>
-                    <input id="new-password" type="password" placeholder="Masukkan Password" required
-                        class="w-full px-3 py-3 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-[#40c057]" />
-                </div>
+      <div class="px-7 flex flex-col flex-grow">
+        <form class="flex flex-col flex-grow">
+          <!-- Password Field for New Password -->
+          <div class="mb-5 relative">
+            <label
+              for="new-password-mobile"
+              class="block mb-2 text-gray-800 font-medium text-[15px]"
+              >Password Baru</label
+            >
+            <div class="relative w-full">
+              <input
+                id="new-password-mobile"
+                type="password"
+                placeholder="Masukkan Password"
+                required
+                class="w-full px-3 py-3 pr-10 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-[#40c057]"
+              />
+              <button
+                type="button"
+                aria-label="Toggle password visibility"
+                id="toggleNewPasswordMobile"
+                class="absolute right-3 top-1/2 -translate-y-1/2 bg-transparent border-none cursor-pointer p-0 text-gray-600 text-base"
+              >
+                <i class="fas fa-eye"></i>
+              </button>
+            </div>
+          </div>
 
-                <div class="mb-5">
-                    <label for="confirm-password" class="block text-xs mb-2 text-gray-800 font-medium">Konfirmasi Password Baru</label>
-                    <input id="confirm-password" type="password" placeholder="Masukkan Konfirmasi Password" required
-                        class="w-full px-3 py-3 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-[#40c057]" />
-                </div>
+          <!-- Confirm Password Field -->
+          <div class="mb-5 relative">
+            <label
+              for="confirm-password-mobile"
+              class="block mb-2 text-gray-800 font-medium text-[15px]"
+              >Konfirmasi Password Baru</label
+            >
+            <div class="relative w-full">
+              <input
+                id="confirm-password-mobile"
+                type="password"
+                placeholder="Masukkan Konfirmasi Password"
+                required
+                class="w-full px-3 py-3 pr-10 border border-gray-300 rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-[#40c057]"
+              />
+              <button
+                type="button"
+                aria-label="Toggle password visibility"
+                id="toggleConfirmPasswordMobile"
+                class="absolute right-3 top-1/2 -translate-y-1/2 bg-transparent border-none cursor-pointer p-0 text-gray-600 text-base"
+              >
+                <i class="fas fa-eye"></i>
+              </button>
+            </div>
+          </div>
 
-                <button type="submit" class="w-full py-4 bg-[#546254] text-white rounded-xl font-semibold text-base hover:bg-[#43543d] transition-colors mt-4">
-                    Submit
-                </button>
-            </form>
-        </div>
+          <button
+            type="submit"
+            class="w-full py-4 bg-[#546254] text-white rounded-xl font-semibold text-base hover:bg-[#43543d] transition-colors mt-4"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
 
-        <div class="absolute bottom-0 left-0 w-full h-[150px] bg-gradient-to-t from-[#D6EBD5] to-white rounded-t-[50px] -z-10"></div>
+      <div
+        class="absolute bottom-0 left-0 w-full h-[150px] bg-gradient-to-t from-[#D6EBD5] to-white rounded-t-[50px] -z-10"
+      ></div>
     </div>
 
     <!-- Desktop Container -->
-    <div class="hidden md:flex bg-[#D6EBD5] rounded-3xl shadow-xl overflow-hidden w-full max-w-[1100px] mx-auto">
-        <div class="bg-white w-1/2 p-20 flex flex-col justify-center items-center rounded-l-3xl text-center">
+    <div
+      class="hidden md:flex bg-[#D6EBD5] rounded-3xl shadow-xl overflow-hidden w-full max-w-[1100px] mx-auto"
+    >
+      <div
+        class="bg-white w-1/2 p-20 flex flex-col justify-center items-center rounded-l-3xl text-center"
+      >
         <h1 class="title-font mb-2 leading-6 select-none">
           Acne<span class="text-[#40c057]">Sense</span>
         </h1>
@@ -79,28 +152,147 @@
         >
           For Your Acne Solution
         </p>
-            <h2 class="text-2xl font-bold mb-4">New Password</h2>
-            <h3 class="text-sm text-gray-600 mb-6">Yeayy, Password baru</h3>
-            
-            <form class="w-full max-w-md space-y-8">
-                <div class="flex flex-col text-left text-base">
-                    <label for="new-password" class="mb-3 text-black text-lg font-medium">Password Baru</label>
-                    <input id="new-password" type="password" placeholder="Masukkan Password" class="border border-gray-400 rounded-lg px-5 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-[#40c057]" required />
-                </div>
+        <h2 class="text-2xl font-bold mb-4">New Password</h2>
+        <h3 class="text-sm text-gray-600 mb-6">Yeayy, Password baru</h3>
 
-                <div class="flex flex-col text-left text-base">
-                    <label for="confirm-password" class="mb-3 text-black text-lg font-medium">Konfirmasi Password Baru</label>
-                    <input id="confirm-password" type="password" placeholder="Masukkan Konfirmasi Password" class="border border-gray-400 rounded-lg px-5 py-4 text-lg focus:outline-none focus:ring-2 focus:ring-[#40c057]" required />
-                </div>
+        <form class="w-full max-w-md space-y-8">
+          <div class="flex flex-col text-left text-base">
+            <label
+              for="new-password"
+              class="mb-3 text-black text-lg font-medium"
+              >Password Baru</label
+            >
+        <div class="relative">
+              <input
+                id="new-password"
+                type="password"
+                placeholder="Masukkan Password"
+                class="w-full border border-gray-400 rounded-lg px-5 py-4 pr-12 text-lg focus:outline-none focus:ring-2 focus:ring-[#40c057]"
+                required
+              />
+              <button
+                type="button"
+                aria-label="Toggle password visibility"
+                id="togglePasswordDesktop"
+                class="absolute right-3 top-1/2 transform -translate-y-1/2 bg-transparent border-none cursor-pointer p-0 text-gray-600 text-xl"
+              >
+                <i class="fas fa-eye"></i>
+              </button>
+            </div>
+          </div>
 
-                <button type="submit" class="w-full bg-[#546254] text-white py-3 rounded-lg hover:bg-[#43543d] transition-colors mt-4">
-                    Submit
-                </button>
-            </form>
-        </div>
-        <div class="w-1/2">
-            <img src="image.png" alt="Face with acne" class="h-full w-full object-cover" loading="lazy" />
-        </div>
+          <div class="flex flex-col text-left text-base">
+            <label
+              for="confirm-password"
+              class="mb-3 text-black text-lg font-medium"
+              >Konfirmasi Password Baru</label
+            >
+            <div class="relative">
+               <input
+                id="confirm-password"
+                type="password"
+                placeholder="Masukkan Konfirmasi Password"
+                class="w-full border border-gray-400 rounded-lg px-5 py-4 pr-12 text-lg focus:outline-none focus:ring-2 focus:ring-[#40c057]"
+                required
+              />
+              <button
+                type="button"
+                aria-label="Toggle password visibility"
+                id="toggleConfirmPasswordDesktop"
+                class="absolute right-3 top-1/2 transform -translate-y-1/2 bg-transparent border-none cursor-pointer p-0 text-gray-600 text-xl"
+              >
+                <i class="fas fa-eye"></i>
+              </button>
+            </div>
+          </div>
+
+          <button
+            type="submit"
+            class="w-full bg-[#546254] text-white py-3 rounded-lg hover:bg-[#43543d] transition-colors mt-4"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
+      <div class="w-1/2">
+        <img
+          src="image.png"
+          alt="Face with acne"
+          class="h-full w-full object-cover"
+          loading="lazy"
+        />
+      </div>
     </div>
-</body>
+
+    <script>
+      const passwordInputDesktop = document.getElementById("new-password");
+      const togglePasswordBtnDesktop = document.getElementById(
+        "togglePasswordDesktop"
+      );
+      const passwordInputMobile = document.getElementById("new-password-mobile");
+      const togglePasswordBtnMobile = document.getElementById(
+        "toggleNewPasswordMobile"
+      );
+      const confirmPasswordInputDesktop = document.getElementById("confirm-password");
+      const toggleConfirmPasswordBtnDesktop = document.getElementById(
+        "toggleConfirmPasswordDesktop"
+      );
+      const confirmPasswordInputMobile = document.getElementById("confirm-password-mobile");
+      const toggleConfirmPasswordBtnMobile = document.getElementById(
+        "toggleConfirmPasswordMobile"
+      );
+
+      togglePasswordBtnDesktop.addEventListener("click", () => {
+        const type =
+          passwordInputDesktop.getAttribute("type") === "password"
+            ? "text"
+            : "password";
+        passwordInputDesktop.setAttribute("type", type);
+
+        togglePasswordBtnDesktop.innerHTML =
+          type === "password"
+            ? '<i class="fas fa-eye"></i>'
+            : '<i class="fas fa-eye-slash"></i>';
+      });
+
+      togglePasswordBtnMobile.addEventListener("click", () => {
+        const type =
+          passwordInputMobile.getAttribute("type") === "password"
+            ? "text"
+            : "password";
+        passwordInputMobile.setAttribute("type", type);
+
+        togglePasswordBtnMobile.innerHTML =
+          type === "password"
+            ? '<i class="fas fa-eye"></i>'
+            : '<i class="fas fa-eye-slash"></i>';
+      });
+
+      toggleConfirmPasswordBtnDesktop.addEventListener("click", () => {
+        const type =
+          confirmPasswordInputDesktop.getAttribute("type") === "password"
+            ? "text"
+            : "password";
+        confirmPasswordInputDesktop.setAttribute("type", type);
+
+        toggleConfirmPasswordBtnDesktop.innerHTML =
+          type === "password"
+            ? '<i class="fas fa-eye"></i>'
+            : '<i class="fas fa-eye-slash"></i>';
+      });
+
+      toggleConfirmPasswordBtnMobile.addEventListener("click", () => {
+        const type =
+          confirmPasswordInputMobile.getAttribute("type") === "password"
+            ? "text"
+            : "password";
+        confirmPasswordInputMobile.setAttribute("type", type);
+
+        toggleConfirmPasswordBtnMobile.innerHTML =
+          type === "password"
+            ? '<i class="fas fa-eye"></i>'
+            : '<i class="fas fa-eye-slash"></i>';
+      });
+    </script>
+  </body>
 </html>
